Card styling, zigzag timeline, animations, css tweaks

--- a/Portfolio/Views/Home/_LayoutIndex.cshtml
+++ b/Portfolio/Views/Home/_LayoutIndex.cshtml
@@ -8,6 +8,10 @@
     <environment include="Development, Production">
         <link rel="stylesheet" href="~/lib/twitter-bootstrap/css/bootstrap.css"/>
         <link rel="stylesheet" href="~/css/site.css"/>
+        <link rel="stylesheet" href="~/css/zigzag.css"/>
+        <link rel="stylesheet" href="~/css/cards.css"/>
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet"> 
+        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"> 
     </environment>
     <environment exclude="Development, Production">
         <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/4.1.1/css/bootstrap.min.css"
