--- a/Portfolio/Views/Shared/_Layout.cshtml
+++ b/Portfolio/Views/Shared/_Layout.cshtml
@@ -39,7 +39,7 @@
 
 @* <partial name="_CookieConsentPartial"/> *@
 
-<div class="container body-content  mt-5 body-shadow">
+<div class="container body-content rounded mt-5 body-shadow">
     @RenderBody()
     <hr/>
     <footer>
