--- a/Portfolio/Views/Home/Index.cshtml
+++ b/Portfolio/Views/Home/Index.cshtml
@@ -14,7 +14,7 @@
                 <p class="lead">Student, Web developer, aspiring Data Scientist.</p>
                 <hr class="my-4">
                 <p></p>
-                <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+                <a class="btn btn-secondary btn-lg" id="ctaButton" role="button">Learn more</a>
             </div>
         </div>
     </div>
@@ -22,26 +22,104 @@
 
 
 <div class="pb-5">
-    <div class="container body-content rounded mt-5 body-shadow">
-        <div class="card-deck">
+    <div class="container body-content rounded mt-3 body-shadow" id="mainContent">
+
+        <div class="row">
+            <div class="col-lg-6 col-lg-offset-3 text-center mx-auto pt-5">
+                <h2><span class="ion-minus"></span>Projects<span class="ion-minus"></span></h2>
+            </div>
+        </div>
+        <div class="card-deck row d-flex justify-content-around" id="project-deck">
             @foreach (var project in Model.Projects)
             {
-                <div class="card">
+                <div class="card text-center">
                     <img class="card-img-top img-thumbnail" src="@project.ImageUrl" alt="Project Thumbnail">
-                    <div class="card-body">
+                    <div class="card-body pb-2">
                         <h4 class="card-title">
                             <a asp-controller="Project" asp-action="Index" asp-route-id="@project.Id">@project.Title</a>
                         </h4>
-                        <p class="card-text">@project.ShortDescription</p>
+                        <p class="card-text text-justify p-2">@project.ShortDescription</p>
                     </div>
-                    <div class="card-footer">
-                        <small class="text-muted">
-                            <a href="@project.GithubUrl">Github Link</a>
-                        </small>
+                    <div class="card-footer bg-transparent border-0 pt-0 pb-3 my-auto">
+                        <div class="d-flex justify-content-around">
+                            <a class="btn btn-default" asp-controller="Project" asp-action="Index" asp-route-id="@project.Id">Read More</a>
+                            <a class="btn btn-default" href="@project.GithubUrl">Github</a>
+                        </div>
                     </div>
                 </div>
             }
-        </div> <hr />
+        </div>
+        
+        <hr class="pt-5 mt-5"/>
+
+        <!--zigzag section-->
+        <div class="row mt-3" id="zigzag">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6 col-lg-offset-3 text-center mx-auto pt-2">
+                        <h2><span class="ion-minus"></span>Vertical Timeline<span class="ion-minus"></span></h2>
+                    </div>
+                </div>
+                <!--first section-->
+                <div class="row align-items-center how-it-works d-flex">
+                    <div class="col-2 text-center bottom d-inline-flex justify-content-center align-items-center">
+                        <div class="circle font-weight-bold">1</div>
+                    </div>
+                    <div class="col-6">
+                        <h5>Fully Responsive</h5>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed porttitor gravida aliquam. Morbi orci urna, iaculis in ligula et, posuere interdum lectus.</p>
+                    </div>
+                </div>
+                <!--path between 1-2-->
+                <div class="row timeline">
+                    <div class="col-2">
+                        <div class="corner top-right"></div>
+                    </div>
+                    <div class="col-8">
+                        <hr/>
+                    </div>
+                    <div class="col-2">
+                        <div class="corner left-bottom"></div>
+                    </div>
+                </div>
+                <!--second section-->
+                <div class="row align-items-center justify-content-end how-it-works d-flex">
+                    <div class="col-6 text-right">
+                        <h5>Using Bootstrap</h5>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed porttitor gravida aliquam. Morbi orci urna, iaculis in ligula et, posuere interdum lectus.</p>
+                    </div>
+                    <div class="col-2 text-center full d-inline-flex justify-content-center align-items-center">
+                        <div class="circle font-weight-bold">2</div>
+                    </div>
+                </div>
+                <!--path between 2-3-->
+                <div class="row timeline">
+                    <div class="col-2">
+                        <div class="corner right-bottom"></div>
+                    </div>
+                    <div class="col-8">
+                        <hr/>
+                    </div>
+                    <div class="col-2">
+                        <div class="corner top-left"></div>
+                    </div>
+                </div>
+                <!--third section-->
+                <div class="row align-items-center how-it-works d-flex">
+                    <div class="col-2 text-center top d-inline-flex justify-content-center align-items-center">
+                        <div class="circle font-weight-bold">3</div>
+                    </div>
+                    <div class="col-6">
+                        <h5>Now with Pug and Sass</h5>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed porttitor gravida aliquam. Morbi orci urna, iaculis in ligula et, posuere interdum lectus.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!--zigzag section-->
+
+
+        <hr/>
         <footer class="pb-2">
             <p>&copy; 2018 - kklosowski.com</p>
         </footer>
