--- a/Portfolio/Views/Project/Index.cshtml
+++ b/Portfolio/Views/Project/Index.cshtml
@@ -21,9 +21,9 @@
             </div>
         </div>
         <div class="row post-text-row">
-            <p id="longDescription">
-                @Html.Raw(@Model.LongDescription))
-            </p>
+            <div>
+                @Html.Raw(@Model.LongDescription)
+            </div>
         </div>
     </div>
 </div>
