--- a/Portfolio/Views/Project/Edit.cshtml
+++ b/Portfolio/Views/Project/Edit.cshtml
@@ -27,7 +27,7 @@
         <span asp-validation-for="LongDescription" class="text-danger"></span>
     </div>
 
-    <button type="submit" class="btn btn-primary">Confirm changes</button>
-    <a asp-controller="Project" asp-action="Index" asp-route-id="@Model.Id" class="btn btn-primary">Drop changes</a>
+    <button type="submit" class="btn btn-secondary">Confirm changes</button>
+    <a asp-controller="Project" asp-action="Index" asp-route-id="@Model.Id" class="btn btn-secondary">Drop changes</a>
 </form>
 
