--- a/Portfolio/Views/Project/All.cshtml
+++ b/Portfolio/Views/Project/All.cshtml
@@ -3,8 +3,8 @@
 @{
     ViewData["Title"] = "All";
 }
-<table class="table table-hover">
-    
+<table class="table table-responsive-md table-hover">
+
     <thead>
         <tr>
             <th>Title</th>
@@ -22,7 +22,7 @@
                 <div class="btn-group btn-group-sm float-right" role="group">
                     <a class="btn btn-secondary" asp-controller="Project" asp-action="Edit" asp-route-id="@project.Id">Edit</a>
                     <a class="btn btn-secondary" asp-controller="Project" asp-action="Index" asp-route-id="@project.Id">Display</a>
-                    <a class="btn btn-secondary" asp-controller="Project" asp-action="Delete" asp-route-id="@project.Id">Delete</a>
+                    <a class="btn btn-secondary" data-toggle="modal" data-target="#removeModal" data-title="@project.Title" data-id="@project.Id">Delete</a>
                 </div>
             </td>
         </tr>
@@ -36,3 +36,29 @@
         </td>
     </tr>
 </table>
+
+<div class="modal fade" id="removeModal" tabindex="-1" role="dialog" aria-labelledby="removeModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="removeModalLabel">Do you want to delete this project?</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+            </div>
+            <div class="modal-footer">
+                <button type="button" id="modalCancel" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <form asp-controller="Project" asp-action="Delete">
+                    <input id="idToDelete" name="Id" type="hidden" />
+                    <button type="submit" class="btn btn-danger" id="modalConfirmed">Remove</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<script src="~/lib/jquery/dist/jquery.js"></script>
+<script src="~/js/modal-confirm.js"></script>
