Index content scaffolding

--- a/Portfolio/Views/Home/Index.cshtml
+++ b/Portfolio/Views/Home/Index.cshtml
@@ -22,7 +22,7 @@
 
 
 <div class="pb-5 mb-5">
-    <div class="container body-content rounded mt-3 body-shadow" id="mainContent">
+    <div class="container body-content rounded mt-5 pt-5 body-shadow" id="mainContent">
 
         <div class="row">
             <div class="col-lg-6 col-lg-offset-3 text-center mx-auto">
@@ -49,9 +49,18 @@
                 </div>
             }
         </div>
-        
         <hr class="pt-5 mt-5"/>
+    </div>
+        
+    <div class="jumbotron w-100 bg-dark" style="height: 600px">
+        <div class="container">
+            <div class="col-lg-6 col-lg-offset-3 text-center mx-auto pt-4">
+                <h2 class="text-light"><span class="ion-minus"></span>A few things about me<span class="ion-minus"></span></h2>
+            </div>
+        </div>
+    </div>
 
+    <div class="container body-content py-4 my-5 rounded body-shadow">
         <!--zigzag section-->
         <div class="row mt-3" id="zigzag">
             <div class="container">
@@ -116,12 +125,20 @@
                 </div>
             </div>
         </div>
-        <!--zigzag section-->
 
-
-        <hr/>
-        <footer class="pb-2">
-            <p>&copy; 2018 - kklosowski.com</p>
-        </footer>
+        
     </div>
+
+    <div class="jumbotron w-100 bg-dark" style="height: 600px">
+        <div class="container">
+            <div class="col-lg-6 col-lg-offset-3 text-center mx-auto pt-4">
+                <h2 class="text-light"><span class="ion-minus"></span>Contact<span class="ion-minus"></span></h2>
+            </div>
+        </div>
+    </div>
+
+    <hr/>
+    <footer class="pb-2">
+        <p>&copy; 2018 - kklosowski.com</p>
+    </footer>
 </div>
