--- a/Portfolio/Views/Home/Index.cshtml
+++ b/Portfolio/Views/Home/Index.cshtml
@@ -21,7 +21,7 @@
 </div>
 
 
-<div class="pb-5 mb-5">
+<div>
     <div class="container body-content rounded mt-5 pt-5 body-shadow" id="mainContent">
 
         <div class="row">
@@ -129,16 +129,55 @@
         
     </div>
 
-    <div class="jumbotron w-100 bg-dark" style="height: 600px">
+    <div class="jumbotron pb-0 mb-0 w-100 bg-dark">
         <div class="container">
             <div class="col-lg-6 col-lg-offset-3 text-center mx-auto pt-4">
-                <h2 class="text-light"><span class="ion-minus"></span>Contact<span class="ion-minus"></span></h2>
+                <h2 class="text-light mb-0"><span class="ion-minus"></span>Contact<span class="ion-minus"></span></h2>
             </div>
+            <section class="divided clearfix bg-dark text-light">
+                <div class="container">
+                    <div class="row py-5">
+                        <div class="col col-12 col-sm-12 col-md-6 p-lg-5">
+                            <div class="p-5">
+                                <form action="#" method="post">
+                                    <div class="form-group">
+                                        <label for="contactEmail">Your email</label>
+                                        <input type="email" class="form-control" id="contactEmail" placeholder="name@example.com">
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="contactContent">Content</label>
+                                        <textarea class="form-control" id="contactContent" rows="3"></textarea>
+                                    </div>
+                                    <button type="submit" class="btn btn-secondary mb-2">Send</button>
+                                </form>
+                            </div>
+                        </div>
+                        <div class="versus">OR</div>
+                        <div class="col col-12 col-sm-12 col-md-6 p-lg-5">
+                            <div class="p-5">
+                                <ul id="contactList" class="list-group list-group-flush">
+                                    <li class="list-group-item text-light bg-dark">
+                                        <a href="https://www.linkedin.com/in/kklosowski/"><i class="text-light fab fa-lg fa-linkedin pr-3"></i><span>LinkedIn</span></a>
+                                    </li>
+                                    <li class="list-group-item text-light bg-dark">
+                                        <a href="https://github.com/kklosowski"><i class="text-light fab fa-lg fa-github-square pr-3"></i><span>Github</span></a>
+                                    </li>
+                                    <li class="list-group-item text-light bg-dark">
+                                        <i class="text-light fab fa-lg fa-facebook-square pr-3"></i><span>Facebook</span>
+                                    </li>
+                                    <li class="list-group-item text-light bg-dark">
+                                        <i class="text-light fas fa-lg fa-envelope pr-3"></i><span>kamil.klosowski@yahoo.com</span>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <hr/>
+            <footer class="py-3 text-light text-center">
+                <p>&copy; 2018 - kklosowski.com</p>
+            </footer>
         </div>
     </div>
-
-    <hr/>
-    <footer class="pb-2">
-        <p>&copy; 2018 - kklosowski.com</p>
-    </footer>
 </div>
