--- a/Portfolio/Views/Home/_LayoutIndex.cshtml
+++ b/Portfolio/Views/Home/_LayoutIndex.cshtml
@@ -10,6 +10,7 @@
         <link rel="stylesheet" href="~/css/site.css"/>
         <link rel="stylesheet" href="~/css/zigzag.css"/>
         <link rel="stylesheet" href="~/css/cards.css"/>
+        <link rel="stylesheet" href="~/css/spacing.css"/>       
         <link href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet"> 
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     </environment>
