--- a/Portfolio/wwwroot/css/site.css
+++ b/Portfolio/wwwroot/css/site.css
@@ -40,6 +40,10 @@
 
 hr { padding-top: 15px; }
 
+#contactList a {
+    color: white;
+}
+
 .display-5 {
     font-size: 2rem;
     font-weight: 300;
@@ -91,8 +95,12 @@ hr { padding-top: 15px; }
 }
 
 @media screen and (min-width: 576px) and (max-width: 767px) {
+    .card {
+        max-height: 60rem;
+    }
     .card-img-top {
-        height: 100%
+        height: 100%;
+        max-height: 350px;
     }
 }
 
